--- a/bIFW_apply.ipynb
+++ b/bIFW_apply.ipynb
@@ -3382,7 +3382,7 @@
     }
    ],
    "source": [
-    "print(f\"The number of nan values is {np.sum(np.isnan(trif_chip_m_masked.values))} out of {2546*2546} total values.\")"
+    "print(f\"The number of nan values is {np.sum(np.isnan(trif_chip_m_masked.values))} out of {2546*2546} total values or.\")"
    ]
   },
   {
