--- a/bIFW_trif.ipynb
+++ b/bIFW_trif.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Updated bIFW code: Trifurcation dataset (SD1)"
+    "# Trifurcation dataset (SD1)"
    ]
   },
   {
