--- a/notes_IFW.ipynb
+++ b/notes_IFW.ipynb
@@ -19,8 +19,10 @@
     "About 100% increase in efficiency from 1), very marginal from 2): something else is taking up resources.\n",
     "\n",
     "### Apply IFW to other synthetic datasets\n",
-    "Issue is that the distributions are different - different discretisation needed?\n",
-    "- Tried with regular discretisation first. Some nans generated in significance matrix; likely due to discretisation - ignored"
+    "Distributions are different - different discretisation needed?\n",
+    "- Tried with regular discretisation first. Some nans generated in significance matrix due to empty genes - REMOVED.\n",
+    "- High housekeeping gene expression poses a problem - high background network connectivity. HKs identified as a module.\n",
+    "    - In these cases normalising by edges makes a big difference..."
    ]
   },
   {
