--- a/notes_IFW.ipynb
+++ b/notes_IFW.ipynb
@@ -22,7 +22,8 @@
     "Distributions are different - different discretisation needed?\n",
     "- Tried with regular discretisation first. Some nans generated in significance matrix due to empty genes - REMOVED.\n",
     "- High housekeeping gene expression poses a problem - high background network connectivity. HKs identified as a module.\n",
-    "    - In these cases normalising by edges makes a big difference..."
+    "    - In these cases normalising by edges makes a big difference...\n",
+    "    - Dummy binarisation: with high HK expression, what do we do with genes with only 1s? Discard? IF high expression, there is a much higher chance of having information in common?"
    ]
   },
   {
